fix user menu z-indexing issue in about-me

--- a/src/routes/about-me/styles.scss
+++ b/src/routes/about-me/styles.scss
@@ -9,7 +9,7 @@
   left:225px;
   width: calc(100% - 224px);
   height: 80px;
-  z-index: 300;
+  z-index: 400;
 
   @media only screen and (max-width: 880px) {
     height: 100px;
